--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       <!-- Desktop Menu -->
       <nav class="desktop-nav">
         <a href="#about">About</a>
-        <a href="#packages">Content Systems</a>
         <a href="#crm">Systems</a>
+        <a href="#packages">Content Systems</a>
         <a href="#system">Script System</a>
         <a href="#testimonials">Reviews</a>
         <a href="#contact">Contact</a>
@@ -38,8 +38,8 @@
     <!-- Mobile Dropdown -->
     <div class="mobile-nav" id="mobileNav">
       <a href="#about" onclick="toggleMenu()">About</a>
-      <a href="#packages" onclick="toggleMenu()">Content Systems</a>
       <a href="#crm" onclick="toggleMenu()">Systems</a>
+      <a href="#packages" onclick="toggleMenu()">Content Systems</a>
       <a href="#system" onclick="toggleMenu()">Script System</a>
       <a href="#testimonials" onclick="toggleMenu()">Reviews</a>
       <a href="#contact" onclick="toggleMenu()">Contact</a>
@@ -100,77 +100,23 @@
         <h3>Core Principles</h3>
         <div class="cols">
           <div>
-            <strong>Precision</strong>
+            <strong>Precision:</strong>
             <span class="muted">Every field, pipeline stage, and automation has a clear job. No clutter.</span>
           </div>
           <div>
-            <strong>Continuity</strong>
+            <strong>Continuity:</strong>
             <span class="muted">Leads, calls, invoices, and delivery are connected so nothing slips through the cracks.</span>
           </div>
           <div>
-            <strong>Speed</strong>
+            <strong>Speed:</strong>
             <span class="muted">Fast builds, fast iteration, and responsive support as your business evolves.</span>
           </div>
           <div>
-            <strong>Ownership</strong>
+            <strong>Ownership:</strong>
             <span class="muted">You own the stack. We document everything so you’re never locked into a black box.</span>
           </div>
         </div>
       </div>
-    </div>
-  </section>
-
-  <!-- CONTENT SYSTEMS -->
-  <section id="packages" class="packages">
-    <div class="wrap">
-      <h2 class="center">Cinematic Content Systems</h2>
-      <p class="muted center">Locked-in visual identity and content systems for short-form video. Upgrade anytime.</p>
-
-      <div class="cards">
-        <div class="card">
-          <div class="row space">
-            <h3>Basic</h3>
-            <div class="price">$1,000</div>
-          </div>
-          <p class="muted">One-time starter to lock your style and test performance.</p>
-          <ul class="ticks">
-            <li>10–12 cinematic clips</li>
-            <li>1 trailer</li>
-            <li>1 revision round</li>
-          </ul>
-          <a class="btn primary block" target="_blank" href="https://buy.stripe.com/3cI28rdvS0jdg4R8A418c00">Select Basic — $1,000</a>
-        </div>
-
-        <div class="card featured">
-          <div class="row space">
-            <h3>Standard</h3>
-            <div class="price">$1,500/mo</div>
-          </div>
-          <p class="muted">30-day content system with consistent character and pacing.</p>
-          <ul class="ticks">
-            <li>25–30 videos monthly</li>
-            <li>Weekly drops</li>
-            <li>2 revisions / week</li>
-          </ul>
-          <a class="btn primary block" target="_blank" href="https://buy.stripe.com/5kQ4gz4Zm5Dx19XcQk18c01">Subscribe — $1,500/mo</a>
-        </div>
-
-        <div class="card">
-          <div class="row space">
-            <h3>Premium</h3>
-            <div class="price">$1,800/mo</div>
-          </div>
-          <p class="muted">Full cinematic universe with direction and priority edits.</p>
-          <ul class="ticks">
-            <li>30+ videos monthly</li>
-            <li>Story arcs & direction</li>
-            <li>Trailer + promo polish</li>
-          </ul>
-          <a class="btn primary block" target="_blank" href="https://buy.stripe.com/fZudR9gI49TN2e16rW18c02">Subscribe — $1,800/mo</a>
-        </div>
-      </div>
-
-      <p class="fineprint">By purchasing, you agree to the terms in the Silent Equity Business Agreement. Clients own final delivered videos. Silent Equity retains internal systems and prompt IP.</p>
     </div>
   </section>
 
@@ -237,6 +183,60 @@
     </div>
   </section>
 
+  <!-- CONTENT SYSTEMS -->
+  <section id="packages" class="packages">
+    <div class="wrap">
+      <h2 class="center">Cinematic Content Systems</h2>
+      <p class="muted center">Locked-in visual identity and content systems for short-form video. Upgrade anytime.</p>
+
+      <div class="cards">
+        <div class="card">
+          <div class="row space">
+            <h3>Basic</h3>
+            <div class="price">$1,000</div>
+          </div>
+          <p class="muted">One-time starter to lock your style and test performance.</p>
+          <ul class="ticks">
+            <li>10–12 cinematic clips</li>
+            <li>1 trailer</li>
+            <li>1 revision round</li>
+          </ul>
+          <a class="btn primary block" target="_blank" href="https://buy.stripe.com/3cI28rdvS0jdg4R8A418c00">Select Basic — $1,000</a>
+        </div>
+
+        <div class="card featured">
+          <div class="row space">
+            <h3>Standard</h3>
+            <div class="price">$1,500/mo</div>
+          </div>
+          <p class="muted">30-day content system with consistent character and pacing.</p>
+          <ul class="ticks">
+            <li>25–30 videos monthly</li>
+            <li>Weekly drops</li>
+            <li>2 revisions / week</li>
+          </ul>
+          <a class="btn primary block" target="_blank" href="https://buy.stripe.com/5kQ4gz4Zm5Dx19XcQk18c01">Subscribe — $1,500/mo</a>
+        </div>
+
+        <div class="card">
+          <div class="row space">
+            <h3>Premium</h3>
+            <div class="price">$1,800/mo</div>
+          </div>
+          <p class="muted">Full cinematic universe with direction and priority edits.</p>
+          <ul class="ticks">
+            <li>30+ videos monthly</li>
+            <li>Story arcs & direction</li>
+            <li>Trailer + promo polish</li>
+          </ul>
+          <a class="btn primary block" target="_blank" href="https://buy.stripe.com/fZudR9gI49TN2e16rW18c02">Subscribe — $1,800/mo</a>
+        </div>
+      </div>
+
+      <p class="fineprint">By purchasing, you agree to the terms in the Silent Equity Business Agreement. Clients own final delivered videos. Silent Equity retains internal systems and prompt IP.</p>
+    </div>
+  </section>
+
   <!-- SCRIPT SYSTEM -->
   <section id="system" class="system">
     <div class="wrap grid">
@@ -269,25 +269,15 @@
       <p class="muted center">Early feedback from system builds and pilot implementations.</p>
 
       <div class="cards testimonials-grid">
+
         <div class="card testimonial-card">
           <div class="testimonial-header">
             <div class="testimonial-name">Jordan Reyes</div>
             <div class="stars"><span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
           </div>
-          <div class="time muted">recently</div>
+          <div class="time muted">a week ago</div>
           <p class="testimonial-text">
             “Silent Equity helped clean up our pipeline and automate follow-ups so nothing slips. I can finally see what’s happening across leads and delivery.”
-          </p>
-        </div>
-
-        <div class="card testimonial-card">
-          <div class="testimonial-header">
-            <div class="testimonial-name">Ashley Coleman</div>
-            <div class="stars"><span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
-          </div>
-          <div class="time muted">recently</div>
-          <p class="testimonial-text">
-            “Before Silent Equity, our tools were scattered. Now onboarding, communication, and reporting run inside one clear system.”
           </p>
         </div>
 
@@ -296,11 +286,23 @@
             <div class="testimonial-name">Marcus Lee</div>
             <div class="stars"><span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
           </div>
-          <div class="time muted">recently</div>
+          <div class="time muted">a month ago</div>
           <p class="testimonial-text">
             “The AI receptionist saved us hours. Clients get instant replies and we capture leads even outside business hours.”
           </p>
         </div>
+
+        <div class="card testimonial-card">
+          <div class="testimonial-header">
+            <div class="testimonial-name">Ashley Coleman</div>
+            <div class="stars"><span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
+          </div>
+          <div class="time muted">9 months ago</div>
+          <p class="testimonial-text">
+            “Before Silent Equity, our tools were scattered. Now onboarding, communication, and reporting run inside one clear system.”
+          </p>
+        </div>
+
       </div>
     </div>
   </section>
@@ -372,3 +374,4 @@
 
 </body>
 </html>
+
