--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <a href="#crm">Systems</a>
         <a href="#packages">Content Systems</a>
         <a href="#system">Script System</a>
-        <a href="#testimonials">Reviews</a>
+        <a href="#testimonials">Client Feedback</a>
         <a href="#contact">Contact</a>
       </nav>
 
@@ -41,7 +41,7 @@
       <a href="#crm" onclick="toggleMenu()">Systems</a>
       <a href="#packages" onclick="toggleMenu()">Content Systems</a>
       <a href="#system" onclick="toggleMenu()">Script System</a>
-      <a href="#testimonials" onclick="toggleMenu()">Reviews</a>
+      <a href="#testimonials" onclick="toggleMenu()">Client Feedback</a>
       <a href="#contact" onclick="toggleMenu()">Contact</a>
     </div>
   </header>
@@ -187,21 +187,21 @@
   <section id="packages" class="packages">
     <div class="wrap">
       <h2 class="center">Cinematic Content Systems</h2>
-      <p class="muted center">Locked-in visual identity and content systems for short-form video. Upgrade anytime.</p>
+      <p class="muted center">Commercial-grade short-form content with cinematic pacing, premium polish, and consistent delivery.</p>
 
       <div class="cards">
         <div class="card">
           <div class="row space">
             <h3>Basic</h3>
-            <div class="price">$1,000</div>
+            <div class="price">$1,000/mo</div>
           </div>
-          <p class="muted">One-time starter to lock your style and test performance.</p>
+          <p class="muted">A monthly baseline build to establish your look, pacing, and signature style.</p>
           <ul class="ticks">
-            <li>10–12 cinematic clips</li>
-            <li>1 trailer</li>
-            <li>1 revision round</li>
+            <li>10–12 cinematic short-form videos per month</li>
+            <li>Commercial-grade framing, lighting, and pacing</li>
+            <li>Consistent visual style that elevates brand presence</li>
           </ul>
-          <a class="btn primary block" target="_blank" href="https://buy.stripe.com/3cI28rdvS0jdg4R8A418c00">Select Basic — $1,000</a>
+          <a class="btn primary block" target="_blank" href="https://buy.stripe.com/3cI28rdvS0jdg4R8A418c00">Subscribe — $1,000/mo</a>
         </div>
 
         <div class="card featured">
@@ -209,11 +209,11 @@
             <h3>Standard</h3>
             <div class="price">$1,500/mo</div>
           </div>
-          <p class="muted">30-day content system with consistent character and pacing.</p>
+          <p class="muted">A monthly commercial content engine built for consistency, momentum, and growth.</p>
           <ul class="ticks">
-            <li>25–30 videos monthly</li>
-            <li>Weekly drops</li>
-            <li>2 revisions / week</li>
+            <li>25–30 cinematic short-form videos per month</li>
+            <li>Structured pacing optimized for retention and replay</li>
+            <li>Weekly content drops that build audience familiarity</li>
           </ul>
           <a class="btn primary block" target="_blank" href="https://buy.stripe.com/5kQ4gz4Zm5Dx19XcQk18c01">Subscribe — $1,500/mo</a>
         </div>
@@ -223,11 +223,11 @@
             <h3>Premium</h3>
             <div class="price">$1,800/mo</div>
           </div>
-          <p class="muted">Full cinematic universe with direction and priority edits.</p>
+          <p class="muted">Directed cinematic rollout with story flow and brand-level polish across releases.</p>
           <ul class="ticks">
-            <li>30+ videos monthly</li>
-            <li>Story arcs & direction</li>
-            <li>Trailer + promo polish</li>
+            <li>30+ cinematic videos per month with narrative flow</li>
+            <li>Story arcs and visual direction across releases</li>
+            <li>High-end polish designed to separate you from everyday creators</li>
           </ul>
           <a class="btn primary block" target="_blank" href="https://buy.stripe.com/fZudR9gI49TN2e16rW18c02">Subscribe — $1,800/mo</a>
         </div>
@@ -265,8 +265,8 @@
   <!-- TESTIMONIALS -->
   <section id="testimonials" class="testimonials">
     <div class="wrap">
-      <h2 class="center">What Clients Say</h2>
-      <p class="muted center">Early feedback from system builds and pilot implementations.</p>
+      <h2 class="center">Client Feedback</h2>
+      <p class="muted center">Feedback from recent implementations.</p>
 
       <div class="cards testimonials-grid">
 
@@ -277,7 +277,7 @@
           </div>
           <div class="time muted">a week ago</div>
           <p class="testimonial-text">
-            “Silent Equity helped clean up our pipeline and automate follow-ups so nothing slips. I can finally see what’s happening across leads and delivery.”
+            “Silent Equity organized our pipeline end-to-end. Leads are tracked, follow-ups are consistent, and we finally have one source of truth for operations.”
           </p>
         </div>
 
@@ -288,7 +288,7 @@
           </div>
           <div class="time muted">a month ago</div>
           <p class="testimonial-text">
-            “The AI receptionist saved us hours. Clients get instant replies and we capture leads even outside business hours.”
+            “Response time improved immediately. The receptionist flow captures inquiries after hours and routes serious leads correctly.”
           </p>
         </div>
 
@@ -299,7 +299,7 @@
           </div>
           <div class="time muted">9 months ago</div>
           <p class="testimonial-text">
-            “Before Silent Equity, our tools were scattered. Now onboarding, communication, and reporting run inside one clear system.”
+            “We went from scattered tools to a single system. Onboarding, communication, and reporting are now structured and repeatable.”
           </p>
         </div>
 
@@ -374,3 +374,4 @@
 
 </body>
 </html>
+
