--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <nav class="desktop-nav">
         <a href="#about">About</a>
         <a href="#crm">Systems</a>
+        <a href="#agents">AI Agents</a>
         <a href="#packages">Content Systems</a>
         <a href="#system">Script System</a>
         <a href="#testimonials">Client Feedback</a>
@@ -39,6 +40,7 @@
     <div class="mobile-nav" id="mobileNav">
       <a href="#about" onclick="toggleMenu()">About</a>
       <a href="#crm" onclick="toggleMenu()">Systems</a>
+      <a href="#agents" onclick="toggleMenu()">AI Agents</a>
       <a href="#packages" onclick="toggleMenu()">Content Systems</a>
       <a href="#system" onclick="toggleMenu()">Script System</a>
       <a href="#testimonials" onclick="toggleMenu()">Client Feedback</a>
@@ -59,7 +61,6 @@
         <div class="buttons">
           <a class="btn primary" href="#crm">See Systems</a>
           <a class="btn ghost" href="#contact">Book a Call</a>
-          <!-- Separate page for AI Agents -->
           <a class="btn ghost" href="ai-agents.html">View AI Agents</a>
         </div>
       </div>
@@ -179,6 +180,75 @@
       <p class="muted center" style="margin-top:14px;">
         Want AI agents (website assistant, receptionist, internal assistant) as a standalone service?
         <a href="ai-agents.html" style="color: var(--accent); text-decoration: none;">View AI Agents →</a>
+      </p>
+    </div>
+  </section>
+
+  <!-- AI AGENTS (HOMEPAGE TEASER) -->
+  <section id="agents" class="packages">
+    <div class="wrap">
+      <h2 class="center">AI Agents & Automation Layer</h2>
+      <p class="muted center">
+        Add an intelligence layer to your business: instant responses, lead qualification, routing, and internal support —
+        built to work with your systems (not replace them).
+      </p>
+
+      <div class="cards">
+
+        <div class="card">
+          <div class="row space">
+            <h3>AI Receptionist</h3>
+            <div class="badge">Front Desk</div>
+          </div>
+          <p class="muted">
+            Responds instantly, qualifies leads, books calls, and routes requests — so you never miss revenue opportunities.
+          </p>
+          <ul class="ticks">
+            <li>Instant replies to inquiries (24/7)</li>
+            <li>Lead intake + qualification (fit, budget, urgency)</li>
+            <li>Booking + routing to the right offer or team member</li>
+          </ul>
+        </div>
+
+        <div class="card featured">
+          <div class="row space">
+            <h3>Website AI Assistant</h3>
+            <div class="badge">Sales Support</div>
+          </div>
+          <p class="muted">
+            Guides visitors, answers questions, and captures leads — turning traffic into booked calls.
+          </p>
+          <ul class="ticks">
+            <li>Answers FAQs using your offers + policies</li>
+            <li>Recommends the right package based on needs</li>
+            <li>Captures contact info and pushes inquiries to your inbox/CRM</li>
+          </ul>
+        </div>
+
+        <div class="card">
+          <div class="row space">
+            <h3>Internal AI Assistant</h3>
+            <div class="badge">Operations</div>
+          </div>
+          <p class="muted">
+            Your team’s internal help desk — trained on your SOPs so work stays consistent and fast.
+          </p>
+          <ul class="ticks">
+            <li>Answers SOP questions instantly</li>
+            <li>Onboarding support for new hires/contractors</li>
+            <li>Reduces repeat questions and operational bottlenecks</li>
+          </ul>
+        </div>
+
+      </div>
+
+      <div class="row gap" style="justify-content:center; margin-top: 16px;">
+        <a class="btn primary" href="ai-agents.html">View AI Agents</a>
+        <a class="btn ghost" href="#contact">Request Setup</a>
+      </div>
+
+      <p class="fineprint center" style="margin-top: 10px;">
+        Available as standalone builds or layered into your AI Business Operating System.
       </p>
     </div>
   </section>
@@ -374,4 +444,3 @@
 
 </body>
 </html>
-
