--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!-- =========================
+FULL UPDATED index.html
+========================= -->
 <!doctype html>
 <html lang="en">
 <head>
@@ -58,9 +61,9 @@
           AI-powered systems for coaches, creators, and agencies. Silent Equity designs the CRM, automations, and client portals that quietly run your business in the background—so you can focus on growth, not glue work.
         </p>
 
+        <!-- UPDATED: removed “Book a Call” -->
         <div class="buttons">
           <a class="btn primary" href="#crm">See Systems</a>
-          <a class="btn ghost" href="#contact">Book a Call</a>
           <a class="btn ghost" href="ai-agents.html">View AI Agents</a>
         </div>
       </div>
@@ -194,7 +197,6 @@
       </p>
 
       <div class="cards">
-
         <div class="card">
           <div class="row space">
             <h3>AI Receptionist</h3>
@@ -239,7 +241,6 @@
             <li>Reduces repeat questions and operational bottlenecks</li>
           </ul>
         </div>
-
       </div>
 
       <div class="row gap" style="justify-content:center; margin-top: 16px;">
@@ -339,7 +340,6 @@
       <p class="muted center">Feedback from recent implementations.</p>
 
       <div class="cards testimonials-grid">
-
         <div class="card testimonial-card">
           <div class="testimonial-header">
             <div class="testimonial-name">Jordan Reyes</div>
@@ -372,7 +372,6 @@
             “We went from scattered tools to a single system. Onboarding, communication, and reporting are now structured and repeatable.”
           </p>
         </div>
-
       </div>
     </div>
   </section>
