--- a/ai-agents.html
+++ b/ai-agents.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Silent Equity — AI Agents</title>
-  <meta name="description" content="Business-grade AI agents that respond, qualify, and route leads automatically — billed monthly.">
+  <meta name="description" content="Custom AI agents designed to handle conversations, qualify leads, and support operations — billed monthly.">
   <link rel="icon" href="assets/logo.png">
   <link rel="stylesheet" href="site.css">
 </head>
@@ -24,7 +24,7 @@
     <nav class="desktop-nav">
       <a href="#agents">Agents</a>
       <a href="#pricing">Pricing</a>
-      <a href="#how">How It Works</a>
+      <a href="#process">Process</a>
       <a href="#faq">FAQ</a>
       <a href="#contact">Contact</a>
     </nav>
@@ -35,7 +35,7 @@
   <div class="mobile-nav" id="mobileNav">
     <a href="#agents" onclick="toggleMenu()">Agents</a>
     <a href="#pricing" onclick="toggleMenu()">Pricing</a>
-    <a href="#how" onclick="toggleMenu()">How It Works</a>
+    <a href="#process" onclick="toggleMenu()">Process</a>
     <a href="#faq" onclick="toggleMenu()">FAQ</a>
     <a href="#contact" onclick="toggleMenu()">Contact</a>
   </div>
@@ -46,11 +46,11 @@
   <div class="wrap grid">
     <div>
       <div class="badge">AI Agents • Monthly Service</div>
-      <h1>AI Agents That <span class="glow">Work</span> While You Sleep</h1>
+      <h1>AI Agents Built for <span class="glow">Real Businesses</span></h1>
 
       <p class="lead">
-        Silent Equity deploys business-grade AI agents that respond instantly, qualify leads,
-        and route conversations — so your business never misses an opportunity.
+        Silent Equity designs AI agents that manage conversations, qualify leads,
+        and support your operations — without replacing your tools or adding complexity.
       </p>
 
       <div class="buttons">
@@ -60,12 +60,12 @@
     </div>
 
     <div class="panel">
-      <h3>Replace These Problems</h3>
+      <h3>What This Replaces</h3>
       <ul class="bullets">
-        <li>Slow response times</li>
-        <li>Missed inquiries after hours</li>
+        <li>Missed messages and delayed replies</li>
         <li>Unqualified leads wasting your time</li>
-        <li>Repetitive questions from clients or staff</li>
+        <li>Repeated questions from clients or staff</li>
+        <li>Manual routing and follow-ups</li>
       </ul>
     </div>
   </div>
@@ -80,31 +80,37 @@
 
       <div class="card">
         <h3>AI Receptionist</h3>
-        <p class="muted">Your 24/7 front desk — answers, qualifies, and routes inquiries.</p>
+        <p class="muted">
+          Handles incoming inquiries, qualifies leads, and routes conversations automatically.
+        </p>
         <ul class="ticks">
-          <li>Instant replies (day & night)</li>
-          <li>Lead qualification questions</li>
-          <li>Booking + routing logic</li>
+          <li>24/7 responses</li>
+          <li>Lead intake & qualification</li>
+          <li>Booking or routing logic</li>
         </ul>
       </div>
 
       <div class="card featured">
         <h3>Website AI Assistant</h3>
-        <p class="muted">Converts visitors into leads by guiding them to the right offer.</p>
+        <p class="muted">
+          Guides visitors, answers questions, and captures leads directly from your site.
+        </p>
         <ul class="ticks">
-          <li>Answers FAQs using your offers</li>
-          <li>Recommends services intelligently</li>
-          <li>Captures lead info automatically</li>
+          <li>Answers offer & service questions</li>
+          <li>Directs users to the right solution</li>
+          <li>Captures contact details</li>
         </ul>
       </div>
 
       <div class="card">
         <h3>Internal AI Assistant</h3>
-        <p class="muted">An internal help desk trained on your SOPs.</p>
+        <p class="muted">
+          Supports your team with instant answers trained on your internal processes.
+        </p>
         <ul class="ticks">
-          <li>Instant SOP answers</li>
-          <li>Onboarding support</li>
-          <li>Reduces operational friction</li>
+          <li>SOP and process support</li>
+          <li>Faster onboarding</li>
+          <li>Less internal back-and-forth</li>
         </ul>
       </div>
 
@@ -116,67 +122,67 @@
 <section id="pricing" class="packages">
   <div class="wrap">
     <h2 class="center">Monthly Pricing</h2>
-    <p class="muted center">No contracts. Cancel anytime. Upgrade as you grow.</p>
+    <p class="muted center">Simple pricing. No contracts. Cancel anytime.</p>
 
     <div class="cards">
 
       <div class="card">
-        <h3>Starter Agent</h3>
-        <div class="price">$297/mo</div>
-        <p class="muted">One AI agent, deployed and managed.</p>
+        <h3>Foundation Agent</h3>
+        <div class="price">$149/mo</div>
+        <p class="muted">A single AI agent configured for your business.</p>
         <ul class="ticks">
-          <li>1 agent (Receptionist OR Website)</li>
-          <li>Lead capture + routing</li>
-          <li>Monthly monitoring</li>
+          <li>1 AI agent (your choice)</li>
+          <li>Lead capture or internal support</li>
+          <li>Ongoing monitoring</li>
         </ul>
         <a class="btn primary block" href="#contact">Get Started</a>
       </div>
 
       <div class="card featured">
-        <h3>Growth Agent</h3>
-        <div class="price">$497/mo</div>
-        <p class="muted">Best for businesses generating consistent leads.</p>
+        <h3>Momentum Agent</h3>
+        <div class="price">$249/mo</div>
+        <p class="muted">For businesses handling consistent traffic or inquiries.</p>
         <ul class="ticks">
-          <li>2 agents working together</li>
-          <li>Smarter qualification logic</li>
-          <li>Monthly tuning & improvements</li>
+          <li>2 AI agents working together</li>
+          <li>Smarter qualification & routing</li>
+          <li>Monthly optimizations</li>
         </ul>
         <a class="btn primary block" href="#contact">Most Popular</a>
       </div>
 
       <div class="card">
-        <h3>Scale Agent Suite</h3>
-        <div class="price">$997/mo</div>
-        <p class="muted">Full AI support layer across your business.</p>
+        <h3>Operations Suite</h3>
+        <div class="price">$399/mo</div>
+        <p class="muted">A full AI support layer across your operations.</p>
         <ul class="ticks">
-          <li>All 3 agents deployed</li>
-          <li>Priority updates & routing logic</li>
-          <li>Internal + external automation</li>
+          <li>All available agents</li>
+          <li>External + internal workflows</li>
+          <li>Priority adjustments</li>
         </ul>
-        <a class="btn primary block" href="#contact">Scale With AI</a>
+        <a class="btn primary block" href="#contact">Upgrade</a>
       </div>
 
     </div>
   </div>
 </section>
 
-<!-- HOW IT WORKS -->
-<section id="how" class="about">
+<!-- PROCESS -->
+<section id="process" class="about">
   <div class="wrap grid">
     <div>
       <h2>How It Works</h2>
       <ul class="ticks">
-        <li>We map your offers and rules</li>
-        <li>Design agent conversation logic</li>
-        <li>Deploy to your website or inbox</li>
-        <li>Monitor and improve monthly</li>
+        <li>We understand your business and offers</li>
+        <li>Design conversation logic</li>
+        <li>Deploy agents to your site or inbox</li>
+        <li>Improve and adjust monthly</li>
       </ul>
     </div>
 
     <div class="panel soft">
-      <h3>You Own the System</h3>
+      <h3>You Stay in Control</h3>
       <p class="muted">
-        Agents are built around your business logic — not generic scripts.
+        Agents follow your rules, language, and priorities — not generic scripts.
       </p>
     </div>
   </div>
@@ -187,16 +193,16 @@
   <div class="wrap">
     <h2>FAQ</h2>
 
-    <p><strong>Is this just a chatbot?</strong><br>
-      <span class="muted">No. These are rule-based AI agents designed for business workflows.</span>
+    <p><strong>Are these pre-built chatbots?</strong><br>
+      <span class="muted">No. Each agent is configured specifically for your business.</span>
     </p>
 
     <p><strong>Can I cancel anytime?</strong><br>
-      <span class="muted">Yes. Month-to-month, no lock-ins.</span>
+      <span class="muted">Yes. All plans are month-to-month.</span>
     </p>
 
-    <p><strong>Does it integrate with my CRM?</strong><br>
-      <span class="muted">Yes — or we can route leads via email or forms.</span>
+    <p><strong>Will this work with my existing systems?</strong><br>
+      <span class="muted">Yes. Agents can operate standalone or alongside your CRM.</span>
     </p>
   </div>
 </section>
