--- a/ai-agents.html
+++ b/ai-agents.html
@@ -24,8 +24,7 @@
     <nav class="desktop-nav">
       <a href="#agents">Agents</a>
       <a href="#pricing">Pricing</a>
-      <a href="#process">Process</a>
-      <a href="#faq">FAQ</a>
+      <a href="#process">How It Works</a>
       <a href="#contact">Contact</a>
     </nav>
 
@@ -35,8 +34,7 @@
   <div class="mobile-nav" id="mobileNav">
     <a href="#agents" onclick="toggleMenu()">Agents</a>
     <a href="#pricing" onclick="toggleMenu()">Pricing</a>
-    <a href="#process" onclick="toggleMenu()">Process</a>
-    <a href="#faq" onclick="toggleMenu()">FAQ</a>
+    <a href="#process" onclick="toggleMenu()">How It Works</a>
     <a href="#contact" onclick="toggleMenu()">Contact</a>
   </div>
 </header>
@@ -50,7 +48,7 @@
 
       <p class="lead">
         Silent Equity designs AI agents that manage conversations, qualify leads,
-        and support your operations — without replacing your tools or adding complexity.
+        and support operations — without replacing your tools or adding complexity.
       </p>
 
       <div class="buttons">
@@ -67,6 +65,9 @@
         <li>Repeated questions from clients or staff</li>
         <li>Manual routing and follow-ups</li>
       </ul>
+      <p class="muted" style="margin-top:10px;">
+        The goal: faster response, cleaner routing, and more booked calls — automatically.
+      </p>
     </div>
   </div>
 </section>
@@ -75,6 +76,7 @@
 <section id="agents" class="packages">
   <div class="wrap">
     <h2 class="center">Available AI Agents</h2>
+    <p class="muted center">Choose one agent or combine multiple for a full automation layer.</p>
 
     <div class="cards">
 
@@ -84,33 +86,33 @@
           Handles incoming inquiries, qualifies leads, and routes conversations automatically.
         </p>
         <ul class="ticks">
-          <li>24/7 responses</li>
-          <li>Lead intake & qualification</li>
-          <li>Booking or routing logic</li>
+          <li>24/7 responses across your website or inbox</li>
+          <li>Lead intake & qualification questions</li>
+          <li>Routes to the right offer, link, or next step</li>
         </ul>
       </div>
 
       <div class="card featured">
         <h3>Website AI Assistant</h3>
         <p class="muted">
-          Guides visitors, answers questions, and captures leads directly from your site.
+          Converts traffic into leads by guiding visitors to the right solution.
         </p>
         <ul class="ticks">
-          <li>Answers offer & service questions</li>
-          <li>Directs users to the right solution</li>
-          <li>Captures contact details</li>
+          <li>Answers FAQs using your services & policies</li>
+          <li>Recommends the best option based on needs</li>
+          <li>Captures contact info and sends it to you instantly</li>
         </ul>
       </div>
 
       <div class="card">
         <h3>Internal AI Assistant</h3>
         <p class="muted">
-          Supports your team with instant answers trained on your internal processes.
+          Helps your team move faster by answering SOP and workflow questions instantly.
         </p>
         <ul class="ticks">
-          <li>SOP and process support</li>
-          <li>Faster onboarding</li>
-          <li>Less internal back-and-forth</li>
+          <li>Trained on your processes, links, and rules</li>
+          <li>Faster onboarding for contractors/staff</li>
+          <li>Reduces repeat questions and bottlenecks</li>
         </ul>
       </div>
 
@@ -122,88 +124,90 @@
 <section id="pricing" class="packages">
   <div class="wrap">
     <h2 class="center">Monthly Pricing</h2>
-    <p class="muted center">Simple pricing. No contracts. Cancel anytime.</p>
+    <p class="muted center">Affordable entry. Clear upgrades. Cancel anytime.</p>
 
     <div class="cards">
 
       <div class="card">
         <h3>Foundation Agent</h3>
         <div class="price">$149/mo</div>
-        <p class="muted">A single AI agent configured for your business.</p>
+        <p class="muted">One AI agent configured for your business.</p>
         <ul class="ticks">
-          <li>1 AI agent (your choice)</li>
-          <li>Lead capture or internal support</li>
-          <li>Ongoing monitoring</li>
+          <li>1 agent (Receptionist OR Website Assistant)</li>
+          <li>Lead capture + routing rules</li>
+          <li>Monthly monitoring</li>
         </ul>
-        <a class="btn primary block" href="#contact">Get Started</a>
+        <a class="btn primary block" target="_blank" href="https://buy.stripe.com/aFa14n63q6HBg4R4jO18c07">Subscribe — $149/mo</a>
       </div>
 
       <div class="card featured">
         <h3>Momentum Agent</h3>
         <div class="price">$249/mo</div>
-        <p class="muted">For businesses handling consistent traffic or inquiries.</p>
+        <p class="muted">Two agents working together for higher conversion.</p>
         <ul class="ticks">
-          <li>2 AI agents working together</li>
+          <li>2 agents (Receptionist + Website Assistant)</li>
           <li>Smarter qualification & routing</li>
-          <li>Monthly optimizations</li>
+          <li>Monthly tuning & improvements</li>
         </ul>
-        <a class="btn primary block" href="#contact">Most Popular</a>
+        <a class="btn primary block" target="_blank" href="https://buy.stripe.com/5kQdR9ezW7LFf0N4jO18c08">Subscribe — $249/mo</a>
       </div>
 
       <div class="card">
         <h3>Operations Suite</h3>
         <div class="price">$399/mo</div>
-        <p class="muted">A full AI support layer across your operations.</p>
+        <p class="muted">A full AI support layer across your business.</p>
         <ul class="ticks">
-          <li>All available agents</li>
+          <li>All agents (Receptionist + Website + Internal)</li>
           <li>External + internal workflows</li>
           <li>Priority adjustments</li>
         </ul>
-        <a class="btn primary block" href="#contact">Upgrade</a>
+        <a class="btn primary block" target="_blank" href="https://buy.stripe.com/eVqfZh77uaXR7yl6rW18c09">Subscribe — $399/mo</a>
       </div>
 
     </div>
+
+    <p class="fineprint center" style="margin-top:10px;">
+      After checkout, you’ll receive a confirmation email and a simple onboarding form to launch your agent.
+    </p>
   </div>
 </section>
 
 <!-- PROCESS -->
 <section id="process" class="about">
   <div class="wrap grid">
+
     <div>
       <h2>How It Works</h2>
+      <p class="muted">
+        This is not a “plug-and-pray” chatbot. We set your agent up like a real business operator — with rules,
+        tone, and routing that match how you actually sell and deliver.
+      </p>
+
       <ul class="ticks">
-        <li>We understand your business and offers</li>
-        <li>Design conversation logic</li>
-        <li>Deploy agents to your site or inbox</li>
-        <li>Improve and adjust monthly</li>
+        <li><strong>1) Onboarding (10 minutes):</strong> You answer a short form about your offers, FAQs, and preferred next steps.</li>
+        <li><strong>2) Agent Build:</strong> We configure the agent’s tone, questions, qualification logic, and routing rules.</li>
+        <li><strong>3) Deployment:</strong> We deploy it to your website or inbox and connect lead capture to your email/CRM.</li>
+        <li><strong>4) Optimization:</strong> Every month we refine messaging, improve routing, and adjust flows based on what’s working.</li>
       </ul>
+
+      <p class="muted" style="margin-top:10px;">
+        Result: faster response times, cleaner lead handling, and fewer missed opportunities — without you living on your phone.
+      </p>
     </div>
 
     <div class="panel soft">
-      <h3>You Stay in Control</h3>
-      <p class="muted">
-        Agents follow your rules, language, and priorities — not generic scripts.
+      <h3>What You Get (Every Month)</h3>
+      <ul class="bullets">
+        <li>Agent monitoring + ongoing uptime support</li>
+        <li>Monthly improvements based on performance</li>
+        <li>Routing rules updated as your offers change</li>
+        <li>Direct support through email/text</li>
+      </ul>
+      <p class="muted" style="margin-top:10px;">
+        You stay in control. We keep it clean, functional, and scalable.
       </p>
     </div>
-  </div>
-</section>
 
-<!-- FAQ -->
-<section id="faq" class="about">
-  <div class="wrap">
-    <h2>FAQ</h2>
-
-    <p><strong>Are these pre-built chatbots?</strong><br>
-      <span class="muted">No. Each agent is configured specifically for your business.</span>
-    </p>
-
-    <p><strong>Can I cancel anytime?</strong><br>
-      <span class="muted">Yes. All plans are month-to-month.</span>
-    </p>
-
-    <p><strong>Will this work with my existing systems?</strong><br>
-      <span class="muted">Yes. Agents can operate standalone or alongside your CRM.</span>
-    </p>
   </div>
 </section>
 
@@ -211,7 +215,12 @@
 <section id="contact" class="contact">
   <div class="wrap grid">
     <div>
-      <h2>Request AI Agent Setup</h2>
+      <h2>Need Help Choosing a Plan?</h2>
+      <p class="muted">
+        If you’re unsure which plan fits, send a message with what you sell and how leads contact you.
+        We’ll tell you the best fit.
+      </p>
+
       <div class="row gap">
         <a class="btn ghost" href="mailto:info@silentequity.pro">info@silentequity.pro</a>
         <a class="btn ghost" href="tel:+18329428769">(832) 942-8769</a>
@@ -224,7 +233,7 @@
         <label>Name<input name="Name" required></label>
         <label>Email<input name="Email" type="email" required></label>
         <label>Message<textarea name="Message" rows="4" required></textarea></label>
-        <button class="btn primary block">Send Request</button>
+        <button class="btn primary block">Send Message</button>
       </form>
     </div>
   </div>
